--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: "/akunewb.hithub.io"
+baseurl: "/akunewb.github.io"
 url: "https://www.tipsrandom.eu.org"
 
 # THEME-SPECIFIC CONFIGURATION
@@ -45,4 +45,4 @@ plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-feed]
 exclude: [".jekyll-cache", ".idea", "vendor/*", "assets/node_modules/*"]
 
 # theme: type-on-strap                                  # if using the theme as a jekyll theme gem
-remote_theme: sylhare/Type-on-Strap                     # If using as a remote_theme in github
+remote_theme: akunewb/Type-on-Strap                     # If using as a remote_theme in github
