--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,11 @@ avatar: assets/img/triangle.png                         # Empty for no avatar in
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: Change <code>header_text</code> in <code>_config.yml</code>  # Change Blog header text
+header_text:Tips Random Website Belajar Perkantoran | Belajar Perhotelan   # Change Blog header text
 header_feature_image: assets/img/pexels/triangular.jpeg
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
+<p> About | Disclaimer | Contact | Privacy Policy | Sitemap </p>
+  Powered by <a href="/">RandomTips</a> with <a href="/">Love</a>
 
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
