--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ favicon: assets/favicon.ico                             # Icon displayed in the 
 header_text: Tips Random Website Belajar Perkantoran Belajar Perhotelan 
 header_feature_image: assets/img/pexels/triangular.jpeg
 footer_text: >
-<a>   About Disclaimer Privacy Policy Contact Sitemap </a>
-  Powered by <a href="/">RandomTips</a> with <a href="/">Love</a>
+  Powered by <a href="/">RandomTips</a> with <a href="/">Love</a> <a>   About Disclaimer Privacy Policy Contact Sitemap </a>
+
 
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
