--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ color_theme: auto                                       # auto, dark or light
 
 # PAGINATION
 paginate: 5
-paginate_path: "/blog/page:num"
+paginate_path: "/page:num"
 
 # PORTFOLIO
 collections:
