--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,14 @@
 #:baseurl: "/akunewb.github.io"
 url: "https://www.tipsrandom.eu.org"
 permalink: /:title/
+locale: "id-ID"
 # THEME-SPECIFIC CONFIGURATION
 title: Tips Random                               # site's title
 description: "Website yang membahas tentang banyak hal"      # used by search engines
 avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
+breadcrumbs: true
+word_per_minute: 200
 
 # Header and footer text
 header_text: Tips Random Website Belajar Perkantoran Belajar Perhotelan 
@@ -35,6 +38,10 @@ color_theme: auto                                       # auto, dark or light
 # PAGINATION
 paginate: 5
 paginate_path: "/page:num"
+
+search: true
+search_full_content: true
+search_provider: lunr
 
 # PORTFOLIO
 collections:
