--- a/_config.yml
+++ b/_config.yml
@@ -55,3 +55,9 @@ exclude: [".jekyll-cache", ".idea", "vendor/*", "assets/node_modules/*"]
 
 # theme: type-on-strap                                  # if using the theme as a jekyll theme gem
 # remote_theme: /Type-on-Strap                     # If using as a remote_theme in github
+
+author:
+  name : tipsrandom.eu.org
+  bio: Blogging enthusiast, tips random, menyukai amira
+  location: Indonesia
+  email: tipsrandomeuorg@gmail.com
