--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,28 @@ collections:
 plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-feed, jekyll-include-cache, jekyll-sitemap]
 exclude: [".jekyll-cache", ".idea", "vendor/*", "assets/node_modules/*"]
 
+encoding: "utf-8"
+markdown_ext: "markdown,mkdown,mkdnmkd,md"
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerp_separator: "\n\n"
+incremental: false
+
+kramdown:
+  input: GFM
+  hard_warp: false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+  
+sass:
+ sass_dir: _sass
+ style: compressed
+  
 # theme: type-on-strap                                  # if using the theme as a jekyll theme gem
 # remote_theme: /Type-on-Strap                     # If using as a remote_theme in github
 
@@ -61,3 +83,23 @@ author:
   bio: Blogging enthusiast, tips random, menyukai amira
   location: Indonesia
   email: tipsrandomeuorg@gmail.com
+
+default: 
+   - scope: 
+     path: ""
+     type: posts
+   value:
+     layout : single
+     author_profile: true
+     read_time: true
+     toc: true
+     toc_label: "Menu"
+     toc_icon: "paperclip"
+     comments: true
+     share: true
+     related: true
+     autoads: true
+     
+   
+   
+   
