--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,20 +1,17 @@
 rohanchandra: # author-id
-  name: "Rohan Chandra"
+  name: "AKTips"
   avatar: "https://avatars2.githubusercontent.com/u/816965?s=460&v=4"
-  url: "https://github.com/rohanchandra"
+  url: "/"
 sylhare:
   name: Sylhare
   avatar: "https://avatars3.githubusercontent.com/u/20642750?s=460&v=4"
-  url: "https://github.com/sylhare"
+  url: "/"
 mmistakes:
   name: "Michael Rose"
   avatar: "https://avatars3.githubusercontent.com/u/1376749?s=460&v=4"
-  url: "https://github.com/mmistakes"
+  url: "/"
 mhagnumdw:
   name: Mhagnumdw
   avatar: "https://avatars2.githubusercontent.com/u/17688846?s=460&v=4"
   url:
-unknown:
-  name: Unknown
-  avatar:
-  url:
+
