--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,5 @@
-rohanchandra: # author-id
-  name: "AKTips"
+tipsrandom: # author-id
+  name: "Tips Random"
   avatar: "https://avatars2.githubusercontent.com/u/816965?s=460&v=4"
   url: "/"
 sylhare:
