--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ word_per_minute: 200
 header_text: Tips Random Website, Belajar Perkantoran, Belajar Perhotelan, Cara Ternak 
 footer_text: >
   Powered by <a href="/">RandomTips</a> with <a href="/">Love</a> 
-  <p> <a> <a href="_posts/pages/about/">  About</a> | <a href="/disclaimer/">Disclaimer</a> | <a href="_posts/pages_posts/pages/privacy/">Privacy Policy</a> | <a href="_posts/pages/contact/">Contact</a> | <a href="_posts/pages/sitemap/">Sitemap</a> </a>
+  <p> <a> <a href="_posts/pages/about/">  About</a> | <a href="_posts/pages/disclaimer/">Disclaimer</a> | <a href="_posts/pages/privacy/">Privacy Policy</a> | <a href="_posts/pages/contact/">Contact</a> | <a href="_posts/pages/sitemap/">Sitemap</a> </a>
 
 
 # Blog
